Update AUTHORS and .mailmap

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,11 @@
 Alexander A. Klimov <alexander.klimov@icinga.com>
 Alvar Penning <alvar.penning@icinga.com>
+Bastian Lederer <bastian.lederer@icinga.com>
 Florian Strohmaier <florian.strohmaier@icinga.com>
+Jan Schuppik <jan.schuppik@icinga.com>
 Johannes Meyer <johannes.meyer@icinga.com>
+Johannes Rauh <johannes.rauh@icinga.com>
+Julian Brost <julian.brost@icinga.com>
 Noé Costa <noe.costa@icinga.com>
 Ravi Kumar Kempapura Srinivasa <ravi.srinivasa@icinga.com>
 Sukhwinder Dhillon <sukhwinder.dhillon@icinga.com>
